prod-gcp/web/app/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: &app web-app
  namespace: web
  labels:
    app: *app
    purpose: web

spec:
  selector:
    matchLabels:
      app: *app
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9121"
      labels:
        app: *app
        purpose: vpn
    spec:
      containers:
        - name: *app
          image: freemiumvpn/fpn-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: *app
          resources:
            limits:
              cpu: 300m
              memory: 75Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 2
