prod-gcp/web/app/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &ingress-route public-web-app
  namespace: web
  labels:
    kubernetes.io/ingress.class: traefik-ingress-public
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`freemiumpn.com`) || Host(`www.freemiumpn.com`)
      services:
        - kind: Service
          name: web-app
          port: 80
  tls:
    secretName: fremiumpn-com-ssl
